--- a/ClientApp/src/app/formula-lookup/customer-details/add-client-location/add-client-location.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/add-client-location/add-client-location.component.html
@@ -75,8 +75,8 @@
   <div class="form-group col-md-12">
     <div class="form-inline">
       <button type="submit" class="btn btn-primary buttoncolor "style="height: 5%; width: 18%;float: right; margin-right: 1%;margin-top:1%" (click)="ClearData();">Clear/Add New Location</button>
-      <button [hidden]="isclienthiddensa" type="submit" class="btn btn-primary buttoncolor " style="float: right; margin-right: 1%; height: 5%; width: 18%; margin-top: 1%" (click)="Client_Locationsave();" matDialogClose>Save Client Locations</button>
-      <button [hidden]="isclienthiddenup" type="submit" class="btn btn-primary buttoncolor " style="float: right; margin-right: 1%; height: 5%; width: 18%; margin-top: 1%" (click)="Client_Locationupdate();" matDialogClose>Update Client Locations</button>
+      <button [hidden]="isclienthiddensa" type="submit" class="btn btn-primary buttoncolor " style="float: right; margin-right: 1%; height: 5%; width: 18%; margin-top: 1%" (click)="Client_Locationsave();" >Save Client Locations</button>
+      <button [hidden]="isclienthiddenup" type="submit" class="btn btn-primary buttoncolor " style="float: right; margin-right: 1%; height: 5%; width: 18%; margin-top: 1%" (click)="Client_Locationupdate();" >Update Client Locations</button>
       <button type="submit" class="btn btn-primary  buttoncolor" style=" float:right;margin-right: 1%; height: 5%; width: 10%; margin-top: 1%" matDialogClose>Close</button>
     </div>
   </div>
