--- a/ClientApp/src/app/pdr-management/search-customer-pdr/search-customer-pdr.component.html
+++ b/ClientApp/src/app/pdr-management/search-customer-pdr/search-customer-pdr.component.html
@@ -47,6 +47,6 @@
 <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%" matDialogClose>Close</button>
-
+  <label for="Recordscount" style="float: left; height: 50px; width: 100px; margin-top: 1%; width: 70px;color:red">Records {{countrecords}}</label>
 </div>
 
