--- a/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
+++ b/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
@@ -60,7 +60,7 @@
 
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%" matDialogClose>Close</button>
 
-
+  <h5 style="float:left;margin-top:10px;color:maroon">{{cassearchLength}} Record(s)</h5>
 
 
 </div>
