--- a/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.css
+++ b/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.css
@@ -19,7 +19,7 @@ p.test {
 input {
   margin: 5px;
 }
-label {
+label{
   font-size: 15px;
   font-family: Verdana;
   text-align: right;
@@ -27,6 +27,7 @@ label {
   display: inline-block;
   min-width: 150px;
 }
+
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
   padding: 0 10px 10px 10px;
@@ -177,13 +178,26 @@ h2.design {
   font-size: 16px;
 }
 
-label {
+/*label {
   font-size: 15px;
   font-family: Verdana;
   display: inline-block;
   text-align: right;
-}
+}*/
 .textsize {
   font-size: 15px;
   font-family: Verdana;
+}
+input[type="file"] {
+  display: none;
+}
+
+
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  color: blueviolet;
 }
