--- a/ClientApp/src/app/formula-lookup/search-formula/search-formula.component.html
+++ b/ClientApp/src/app/formula-lookup/search-formula/search-formula.component.html
@@ -53,7 +53,7 @@
           <mat-progress-spinner class="center" style="display: flex; justify-content: center; align-items: center; " *ngIf="isLoading;else conten" color="accent"
                                 mode="indeterminate">
           </mat-progress-spinner>
-          <tr *ngFor="let raw_search of dataraw_search | filter:formulanamedata|filter:formulacodedata|filter:lbnotedata ; let i=index;" (click)="setvalues( raw_search);close();" #conten>
+          <tr *ngFor="let raw_search of dataraw_search | filter:formulanamedata:filterMetadata|filter:formulacodedata:filterMetadata|filter:lbnotedata:filterMetadata ; let i=index;" (click)="setvalues( raw_search);close();" #conten>
             <td class="tabledatasize  ">{{ raw_search.FormulaCode }}</td>
             <td class="tabledatasize ">{{ raw_search.Description}}</td>
             <td class="tabledatasize ">{{ raw_search.LabRefNo }}</td>
@@ -71,7 +71,7 @@
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%" matDialogClose>Close</button>
 
-
+    <h5 style="float:left;margin-top:10px;color:maroon">{{filterMetadata.count}} Record(s)</h5>
 
 
   </div>
