--- a/ClientApp/src/app/raw-material/add-supplier/add-prefix/add-prefix.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-prefix/add-prefix.component.html
@@ -33,32 +33,43 @@
       <form>
         <div class="form-row">
           <div class="form-group col-md-7">
-            <div *ngFor="let itemdata of defaultdataprefix">
+            <div class="form-inline">
               <label for="inputCompany Name">Company Name</label>
-              <input type="text" class="form-control" id="inputCompany Name" placeholder="Company Name" value={{itemdata.CompanyName}}>
+              <input type="text" class="form-control" id="inputCompany Name" style="width:80%" placeholder="Company Name" value="" [(ngModel)]="compname">
+            </div>
+            <div class="form-inline" style="padding-top:10px">
               <label for="validationTextarea">Address</label>
-              <textarea value="{{itemdata.CompanyAddress}}" class="form-control" id="validationTextarea" placeholder="Address"></textarea>
+              <textarea value=""[(ngModel)]="compaddress" style="width:80%" class="form-control" id="validationTextarea" placeholder="Address"></textarea>
+            </div>
+            <div class="form-inline" style="padding-top:10px">
               <label for="Phone Number" style="margin-top:5px">Phone Number</label>
-              <input type="text" class="form-control" id="inputPhone Number" placeholder="Phone Number" value={{itemdata.CompanyNumber}}>
+              <input type="text" class="form-control" id="inputPhone Number" style="width:80%" placeholder="Phone Number" value="" [(ngModel)]="compnumber">
+            </div>
+            <div class="form-inline" style="padding-top:10px">
               <label for="Phone Number">Fax</label>
-              <input value={{itemdata.Fax}} type="text" class="form-control" id="inputFax" placeholder="Fax">
+              <input value="" [(ngModel)]="compfax" type="text" style="width:80%" class="form-control" id="inputFax" placeholder="Fax">
+            </div>
+            <div class="form-inline" style="padding-top:10px">
               <label for="Email">Email</label>
-              <input type="text" class="form-control" id="inputEmail" placeholder="Email" value={{itemdata.CompanyEmail}}>
+              <input type="text" class="form-control" style="width:80%" id="inputEmail" placeholder="Email" value="" [(ngModel)]="compemail">
+            </div>
+            <div class="form-inline" style="padding-top:10px">
               <label for="WebAddress">Web Address</label>
-              <input type="text" class="form-control" id="inputWebAddress" placeholder="WebAddress" value={{itemdata.CompanyWebAddress}}>
-              <div class="custom-file" style="margin-top:30px">
-                <input value={{itemdata.picturePath}} type="file" class="custom-file-input" id="validatedCustomFile" required>
-                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-                <div class="invalid-feedback">Example invalid custom file feedback</div>
+              <input type="text" class="form-control" style="width:80%" id="inputWebAddress" placeholder="WebAddress" value="" [(ngModel)]="compwebaddress">
               </div>
+                <div class="custom-file" style="margin-top:30px">
+                  <input value="" type="file" style="width:80%" class="custom-file-input" id="validatedCustomFile" [(ngModel)]="comppicturepath" required>
+                  <label class="custom-file-label" for="validatedCustomFile"></label>
+                  <div class="invalid-feedback">Example invalid custom file feedback</div>
+                </div>
+                
+              </div>
+              <div class="form-group col-md-5">
+                <div class="text-center" style="margin-top:130px;">
+                  <img src="../../../../assets/confidential red round stamp.jpg" class="rounded">
+                </div>
               </div>
             </div>
-            <div class="form-group col-md-5">
-              <div class="text-center" style="margin-top:130px;">
-                <img src="../../../../assets/confidential red round stamp.jpg" class="rounded">
-              </div>
-            </div>
-          </div>
       </form>
     </div>
     <div class="card">
@@ -67,20 +78,26 @@
         <form>
           <div class="form-row">
             <div class="form-group col-md-8">
-             
+
+            
+              <div class="form-inline">
                 <label for="inputPrefix">Prefix</label>
-                <div class="form-inline">
-                  <input type="text" class="form-control" id="inputPrefix" placeholder="Prefix" style="width:70%" #abbrawform>
-                  <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;"(click)="saverawprefix(abbrawform.value,abbdescriptionrawform.value)">Add Prefix</button>
-                </div>
+                <input type="text" class="form-control" id="inputPrefix" placeholder="Prefix" style="width:60%;margin-left:49px" #abbrawform>
+                <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="saverawprefix(abbrawform.value,abbdescriptionrawform.value)">Add Prefix</button>
+              </div>
+              <div class="form-inline">
                 <label for="inputPrefix">Prefix Description</label>
-                <input type="text" class="form-control" id="inputPrefix" placeholder="Prefix Description" style="width:80%"#abbdescriptionrawform >
+                <input type="text" class="form-control" id="inputPrefix" placeholder="Prefix Description" style="width:80%;margin-left:49px" #abbdescriptionrawform>
+              </div>
+              <div class="form-inline">
                 <label for="inputSeperator">Seperator</label>
-                <input type="text" class="form-control" id="inputPrefix" placeholder=":" style="width:80%">
+                <input type="text" class="form-control" id="inputPrefix" placeholder=":" style="width:80%;margin-left:50px">
+              </div>
+              <div class="form-inline">
                 <label for="inputPrefix">Numbering Starts From</label>
                 <input type="text" class="form-control" id="inputPrefix" placeholder="1234567" style="width:80%">
               </div>
-              
+              </div>
               <div class="form-group col-md-4">
                 <div style="margin-left:10%">
                   <label for="listofallprefix">List of All Prefix</label>
@@ -95,8 +112,8 @@
                       </tbody>
                     </table>
                   </div>
-                
-              </div>
+
+                </div>
               </div>
             </div>
         </form>
@@ -150,7 +167,7 @@
 <div class="card">
   <div class="card-body">
     <button type="submit" class="btn btn-primary buttoncolor" style="margin-right:10px;height:50px;float:right;width: 120px;" matDialogClose>Back </button>
-    <button type="submit" class="btn btn-primary buttoncolor" style="margin-right:10px;height:50px;float:right;width: 120px;" matDialogClose>Save </button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="margin-right:10px;height:50px;float:right;width: 120px;" >Save </button>
   </div>
 </div>
     
