--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.css
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.css
@@ -22,6 +22,8 @@ input {
   font-family: Verdana;
 }
 label {
+  font-size: 15px;
+  font-family: Verdana;
   text-align: right;
   padding-right: 20px;
   display: inline-block;
