--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -58,7 +58,7 @@
     </form>
 
     <nav ngbNav [(activeId)]="active" #nav="ngbNav" class="nav-tabs scrolling-wrapper">
-      <ng-container ngbNavItem="1" style="margin-left:20px">
+      <ng-container ngbNavItem="1">
         <a class="tabcolor tabbutto tabrowli textsize " ngbNavLink>Contact Details</a>
         <ng-template ngbNavContent>
           <form>
@@ -66,7 +66,7 @@
               <div class="form-group col-md-6">
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="Address">Address</label>
-                  <textarea type="text" style="width:60%; height: 20%" class="form-control" id="SupplierAddress" placeholder="" [(ngModel)]="address" #supplieRADD name="Address" value=""></textarea>
+                  <textarea type="text" style="width:60%; height: 20%;margin-left:0.6%" class="form-control" id="SupplierAddress" placeholder="" [(ngModel)]="address" #supplieRADD name="Address" value=""></textarea>
                 </div>
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="Cnt">Country</label>
@@ -91,7 +91,7 @@
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="webadd">Web Address</label>
                   <input type="text" style="width:60%;" class="form-control" id="webste" placeholder="" [(ngModel)]="website" #Cntper name="webid" value="">
-                  <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 40px;margin-top:10px;" (click)="openlink()">Go</button>
+                  <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;" (click)="openlink()">Go</button>
                 </div>
 
                 <div class=" form-inline" style="padding-top:1%;">
@@ -101,7 +101,7 @@
 
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="inputState">Ship Via</label>
-                  <select id="inputState" style="width:60%;" class="form-control" placeholder="" [(ngModel)]="ShipVia" #shpvia name="shipway" value="">
+                  <select id="inputState" style="width:60%; margin-left:0.6%" class="form-control" placeholder="" [(ngModel)]="ShipVia" #shpvia name="shipway" value="">
                     <option selected>Choose...</option>
                     <option>DHL</option>
                     <option>Federal Express</option>
@@ -113,18 +113,18 @@
                   </select>
                 </div>
 
-                <div class=" form-inline" style="padding-top:1%;">
+                <div class=" form-inline" style="padding-top:2%;">
                   <label for="inputState">Status</label>
-                  <select id="inputState" style="width:60%" class="form-control" placeholder="" [(ngModel)]="SupplierStatus" name="sts" >
+                  <select id="inputState" style="width:60%;margin-left:0.6%" class="form-control"  (change)="statuschange($event)" name="sts" value="">
                  
                     <option selected >Active</option>
                     <option>Inactive</option>
                   </select>
                 </div>
 
-                <div class=" form-inline" style="padding-top:1%;">
+                <div class=" form-inline" style="padding-top:2%;">
                   <label for="inputEmail4">Ship To</label>
-                  <textarea type="text" style="width:60%; height: 20%" class="form-control" id="ship" placeholder="" [(ngModel)]="shipto" #shpto name="ship" value=""></textarea>
+                  <textarea type="text" style="width:60%; height: 20%;margin-left:0.6%" class="form-control" id="ship" placeholder="" [(ngModel)]="shipto" #shpto name="ship" value=""></textarea>
                 </div>
 
 
@@ -162,10 +162,10 @@
                   <label for="inputPassword4" style="margin-top: 10px;">Email</label>
                   <textarea type="text" style="width: 60%; height: 15%" class="form-control" id="emails" placeholder="" [(ngModel)]="email" #mail name="eml" value=""></textarea>
                 </div>-->
-                <div class="form-inline">
+                <div class="form-inline" style="padding-top:1%">
                   <label>Email</label>
                   <input class="form-control" id="suppemail"
-                         style="width: 50%;"
+                         style="width: 60%;"
                          type="text"
                       
                          [(ngModel)]="emailsup"
@@ -184,7 +184,7 @@
                   <label for="inputPassword4" style="margin-top: 10px;">Contact #</label>
                   <input type="text" style="width: 60%;" class="form-control" id="ContactNumber" placeholder="" [(ngModel)]="ContactNo" #cno name="cnu" value="">
                 </div>
-                <div class=" form-inline" style="padding-top:1%;">
+                <div class=" form-inline" style="padding-top:1%;margin-left:0.6%">
                   <label for="Terms">Terms</label>
 
                   <select id="Terms" class="form-control" style="width:60%;" name="termname" [(ngModel)]="Terms">
@@ -193,17 +193,17 @@
                     <!--<option>DHL</option>
       <option>Federal Express</option>-->
                   </select>
-                  <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 40px;margin-top:10px;" (click)="OpenTermsMaster()">...</button>
+                  <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;" (click)="OpenTermsMaster()">...</button>
                 </div>
 
-                <div class=" form-inline" style="padding-top:2%;">
+                <div class=" form-inline" style="padding-top:1%;">
                   <label for="inputPassword4" style="margin-top: 10px;">Expense Account</label>
                   <input type="text" style="width: 60%;" class="form-control" id="Expenseaccount" placeholder="" [(ngModel)]="ExpenseAccount" #ExpAcc name="Expense" value="">
                 </div>
 
                 <div class=" form-inline" style="padding-top:1%;">
                   <label for="inputEmail4" style="margin-top:10px;">Notes</label>
-                  <textarea type="text" style="width: 60%; height: 20%" class="form-control" id="notss" placeholder="" [(ngModel)]="Notes" #nts name="note" value=""></textarea>
+                  <textarea type="text" style="width: 60%; height: 20%;margin-left:0.6%" class="form-control" id="notss" placeholder="" [(ngModel)]="Notes" #nts name="note" value=""></textarea>
                 </div>
 
               </div>
@@ -257,10 +257,11 @@
                   </div>
                   <div class="form-row">
                     <div class="col">
+                      <h5 style="float:left;margin-top:10px;color:maroon">{{dataloadsupplierallrmlength}} Record(s)</h5>
                     </div>
                     <div class="col">
-                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 400px; height: 50px; width: 190px;margin-top:10px;" disabled>Select All</button>
-                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 50px; width: 190px;margin-top:10px;" disabled>Delect All</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 400px; height: 50px; width: 190px;margin-top:10px;"  (click)="isAllSelected();">Select All</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 50px; width: 190px;margin-top:10px;"   (click)="isAllunSelected();">Deselect All</button>
                     </div>
                   </div>
                 </ng-template>
@@ -268,7 +269,7 @@
               <ngb-tab title="Approved Raw Material(s)">
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
-                  <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;background-color: white" >
+                  <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;background-color: white">
                     <table class=" table table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
                       <thead>
                         <tr>
@@ -294,6 +295,7 @@
                       </tbody>
                     </table>
                   </div>
+                  <h5 style="float:left;margin-top:10px;color:maroon">{{dataloadsupplierapprovedrmlength}} Record(s)</h5>
                 </ng-template>
               </ngb-tab>
               <ngb-tab title=" Unapproved Raw Materials">
@@ -328,13 +330,14 @@
                       </tbody>
                     </table>
                   </div>
+                  <h5 style="float:left;margin-top:10px;color:maroon">{{dataloadsupplierunapprovedrmlength}} Record(s)</h5>
                 </ng-template>
               </ngb-tab>
               <ngb-tab title="Formula Details">
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
                   <div style="margin-left:1%;margin-top:1%;  overflow-y: auto;height:500px;background-color:white">
-                    <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white"  id="supplier table" width="98%">
+                    <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="supplier table" width="98%">
                       <thead>
                         <tr>
                           <th scope="col">PDR # </th>
@@ -358,6 +361,7 @@
                       </tbody>
                     </table>
                   </div>
+                  <h5 style="float:left;margin-top:10px;color:maroon">{{formuladetailslength}} Record(s)</h5>
                 </ng-template>
               </ngb-tab>
             </ngb-tabset>
@@ -390,6 +394,9 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+          <div class="col">
+            <h5 style="float:left;margin-top:10px;color:maroon">{{componentdata1}} Record(s)</h5>
           </div>
         </ng-template>
       </ng-container>
@@ -499,11 +506,11 @@
 
 <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  [routerLink]="'/RawMaterial'">Back</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  (click)="Suppliersaveupdate(supplierkey.value,suppliername.value,suppliercod.value);">Save</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"(click)="Suppliersupdate(supplierkey.value,suppliername.value);">Update</button>
+  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  [routerLink]="'/RawMaterial'" matDialogClose>Back</button>
+  <button type="submit"  [hidden]="issearchsuppliersave" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%"  (click)="Suppliersaveupdate(supplierkey.value,suppliername.value,suppliercod.value);">Save</button>
+  <button type="submit" class="btn btn-primary  buttoncolor" [hidden]="issearchsupplierupdate" style="float:right;margin-right:10px;height:50px;margin-top:.5%"(click)="Suppliersupdate(supplierkey.value,suppliername.value);">Update</button>
   <button type="submit"  id="btnenw"class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%" (click)="ClearData();">New</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5% " (click)="deletesupplier(suppliername.value)">Delete Supplier</button>
+  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5% " (click)="deletesupplier(suppliername.value);ClearData();">Delete Supplier</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%">Print Preview</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:.5%">Export to Excel</button>
 
